Added siunitx in the MathJax setup

--- a/mathjax-setup/load-mathjax-cdn.html
+++ b/mathjax-setup/load-mathjax-cdn.html
@@ -12,7 +12,7 @@
 	MathJax.Hub.Config({
 		TeX: {
 			equationNumbers: { autoNumber: "AMS"},
-			extensions: ["[Contrib]/physics/physics.js"]
+			extensions: ["[Contrib]/physics/physics.js", "[Contrib]/siunitx/siunitx.js"]
 		}
 	});
 </script>
