--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
----
-layout: compress
----
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8"/>
 <script type="text/x-mathjax-config">MathJax.Ajax.config.path.Contrib="https://cdn.mathjax.org/mathjax/contrib",MathJax.Hub.Register.StartupHook("TeX Jax Ready",function(){MathJax.Hub.Insert(MathJax.InputJax.TeX.Definitions.macros,{cancel:["Extension","cancel"],bcancel:["Extension","cancel"],xcancel:["Extension","cancel"],cancelto:["Extension","cancel"]})}),MathJax.Hub.Config({TeX:{equationNumbers:{autoNumber:"AMS"},extensions:["[Contrib]/physics/physics.js"]}});</script><script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full"></script>
 	<link type="text/css" rel="stylesheet" href="https://ickc.github.io/multimarkdown-latex-css/combined-css/multimarkdown-latex.css"/>
+	<link type="text/css" rel="stylesheet" href="https://ickc.github.io/multimarkdown-latex-css/fonts-lmodern/fonts-lmodern.css"/>
 	<meta name="latexheaderlevel" content="2"/>
-	<meta name="latexinput" content="mmd-article-header"/>
-	<meta name="latexinput" content="mmd-natbib-plain"/>
-	<meta name="latexinput" content="mmd-load-physics-related"/>
-	<meta name="latexinput" content="mmd-load-tables-related"/>
-	<meta name="latexinput" content="mmd-load-pdfpages"/>
-	<meta name="latexinput" content="mmd-load-headings"/>
 	<meta name="thmd" content="chapter"/>
-	<meta name="latexinput" content="mmd-load-amsthm"/>
 	<title>Temp Title</title>
 	<meta name="subtitle" content="Temp Subtitle"/>
 	<meta name="keywords" content="Temp Keyword"/>
@@ -26,13 +17,8 @@ layout: compress
 	<meta name="affiliation" content="University of California, Berkeley"/>
 	<meta name="copyright" content="2016 Kolen Cheung  
 All Rights Reserved."/>
-	<meta name="latexmode" content="memoir"/>
-	<meta name="latexinput" content="mmd-article-begin-doc"/>
 	<meta name="tocd" content="5"/>
 	<meta name="secd" content="5"/>
-	<meta name="latexinput" content="mmd-load-toc-setcounter"/>
-	<meta name="latexinput" content="mmd-load-toc"/>
-	<meta name="latexfooter" content="mmd-memoir-footer"/>
 </head>
 <body>
 
@@ -55,6 +41,7 @@ All Rights Reserved."/>
 <li><a href="#unordered">Unordered</a></li>
 </ul></li>
 <li><a href="#heading">Heading</a></li>
+<li><a href="#tables">Tables</a></li>
 </ul></li>
 </ul>
 </div>
@@ -144,6 +131,33 @@ done &lt; &quot;$1&quot;
 <h2 id="heading">Heading</h2>
 
 <p>See the heading numbering above</p>
+
+<h2 id="tables">Tables</h2>
+
+<table>
+<colgroup>
+<col/>
+<col/>
+</colgroup>
+
+<thead>
+<tr>
+	<th>test</th>
+	<th>-ing</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr>
+	<td>3</td>
+	<td>4</td>
+</tr>
+</tbody>
+</table>
 
 </body>
 </html>
