--- a/js-setup/mathjax-setup/load-mathjax-cdn.html
+++ b/js-setup/mathjax-setup/load-mathjax-cdn.html
@@ -1,20 +1,24 @@
-<!-- setup MathJax to use physics package, cancel package, and equation numbering -->
+<!-- setup MathJax to use physics package, SIUnitX package, cancel package, equation numbering, and dollar sign -->
 <script type="text/x-mathjax-config">
-	MathJax.Ajax.config.path["Contrib"] = "https://cdn.mathjax.org/mathjax/contrib";
-	MathJax.Hub.Register.StartupHook("TeX Jax Ready",function () {
-		MathJax.Hub.Insert(MathJax.InputJax.TeX.Definitions.macros,{
-			cancel: ["Extension","cancel"],
-			bcancel: ["Extension","cancel"],
-			xcancel: ["Extension","cancel"],
-			cancelto: ["Extension","cancel"]
-		});
-	});
-	MathJax.Hub.Config({
-		TeX: {
-			equationNumbers: { autoNumber: "AMS"},
-			extensions: ["[Contrib]/physics/physics.js", "[Contrib]/siunitx/siunitx.js"]
-		}
-	});
+  MathJax.Ajax.config.path["Contrib"] = "https://cdn.mathjax.org/mathjax/contrib";
+  MathJax.Hub.Register.StartupHook("TeX Jax Ready",function () {
+  	MathJax.Hub.Insert(MathJax.InputJax.TeX.Definitions.macros,{
+  		cancel: ["Extension","cancel"],
+  		bcancel: ["Extension","cancel"],
+  		xcancel: ["Extension","cancel"],
+  		cancelto: ["Extension","cancel"]
+  	});
+  });
+  MathJax.Hub.Config({
+  	tex2jax: {
+  		inlineMath: [['$','$'], ['\\(','\\)']],
+  		processEscapes: true
+  	},
+  	TeX: {
+  		equationNumbers: { autoNumber: "AMS"},
+  		extensions: ["[Contrib]/physics/physics.js","[Contrib]/siunitx/siunitx.js"]
+  	}
+  });
 </script>
 <!-- Load MathJax -->
 <script type="text/javascript"
