Minor Update on demo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ All Rights Reserved."/>
 
 <p><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/default.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script><script>hljs.initHighlightingOnLoad();</script>
 <!-- \begin{comment} -->
-<strong>Table of Contents</strong></p><div class="TOC">
+<strong>Contents</strong></p><div class="TOC">
 
 
 <ul>
