Capitalize first letter in amsthm definitions

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ done &lt; &quot;$1&quot;
 
 <h2 id="amsthm">Amsthm</h2>
 
-<p><!--\begin{conjecture}--> <div class="conjecture">
+<p><!--\begin{Conjecture}--> <div class="Conjecture">
 1+1=2
-<!--\end{conjecture}--></div></p>
+<!--\end{Conjecture}--></div></p>
 
 <h2 id="list">List</h2>
 
