--- a/README.html
+++ b/README.html
@@ -34,7 +34,7 @@
 <p>The followings are put in &lt;_sass/&gt;:</p>
 <ol style="list-style-type: decimal">
 <li><code>amsthm</code>: See ickc/pandoc-amsthm</li>
-<li><code>list</code>: Replicated the different type of styles in different levels of a <em>nested list</em> in LaTeX<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>.</li>
+<li><code>list</code>: Replicated the different type of styles in different levels of a <em>nested list</em> in LaTeX.<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></li>
 <li><code>heading</code> and <code>toc</code>:
 <ol style="list-style-type: decimal">
 <li>Heading counter: Replicate the numbering in headings.<br />
