--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
   <link rel="stylesheet" href="https://ickc.github.io/markdown-latex-css/css/markdown-latex-lmodern.css" type="text/css" />
   <link rel="stylesheet" href="https://ickc.github.io/markdown-latex-css/fonts/fonts.css" type="text/css" />
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full" type="text/javascript"></script>
-  <script type="text/x-mathjax-config"> MathJax.Ajax.config.path["Contrib"]="https://cdn.mathjax.org/mathjax/contrib"; MathJax.Hub.Register.StartupHook("TeX Jax Ready",function (){MathJax.Hub.Insert(MathJax.InputJax.TeX.Definitions.macros,{cancel: ["Extension","cancel"], bcancel: ["Extension","cancel"], xcancel: ["Extension","cancel"], cancelto: ["Extension","cancel"]});}); MathJax.Hub.Config({tex2jax:{inlineMath: [['$','$'], ['\\(','\\)']], processEscapes: true}, TeX:{equationNumbers:{autoNumber: "AMS"}, extensions: ["[Contrib]/physics/physics.js","[Contrib]/siunitx/siunitx.js"]}});</script><script type="text/javascript"src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full"></script>
+  <!-- setup MathJax to use physics package, SIUnitX package, cancel package, equation numbering, and dollar sign -->
+  <script type="text/x-mathjax-config">
+    MathJax.Ajax.config.path["Contrib"] = "https://cdn.mathjax.org/mathjax/contrib";
+    MathJax.Hub.Config({
+    	TeX: {
+    		equationNumbers: { autoNumber: "AMS"},
+    		extensions: ["cancel.js","[Contrib]/physics/physics.js","[Contrib]/siunitx/siunitx.js"]
+    	}
+    });
+  </script>
+  <!-- Load MathJax -->
+  <script type="text/javascript"
+  	src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full">
+  </script>
 </head>
 <body>
 <div id="header">
@@ -78,7 +91,11 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h2 id="mathjax-and-physics"><span class="header-section-number">1.1</span> MathJax and Physics</h2>
 <p>Physics:</p>
 <span class="math display">\[\begin{equation}
-\ket{\upsilon}
+\ket{\psi}
+\end{equation}\]</span>
+<p>SIunitx:</p>
+<span class="math display">\[\begin{equation}
+c = \SI{299792458}{\m\per\s}
 \end{equation}\]</span>
 <p>Cancel:</p>
 <span class="math display">\[\begin{equation}
