mathjax setup: vanilla js version & cleanup

--- a/js/mathjax/load-mathjax-cdn.html
+++ b/js/mathjax/load-mathjax-cdn.html
@@ -1,3 +1,1 @@
-<script type="text/javascript"
-	src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full">
-</script>
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full"></script>
