setup-mathjax-cdn: html use javascript; simplified

--- a/js/mathjax/setup-mathjax-cdn.html
+++ b/js/mathjax/setup-mathjax-cdn.html
@@ -1,9 +1,8 @@
-<script type="text/x-mathjax-config">
-  MathJax.Ajax.config.path["Contrib"] = "https://cdn.mathjax.org/mathjax/contrib";
-  MathJax.Hub.Config({
+<script type="text/javascript">
+  window.MathJax = {
     TeX: {
-      equationNumbers: { autoNumber: "AMS"},
+      equationNumbers: { autoNumber: "AMS" },
       extensions: ["cancel.js","[Contrib]/physics/physics.js","[Contrib]/siunitx/siunitx.js"]
     }
-  });
+  };
 </script>
